// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mobile-item.vue Snapshot for mobile-item component with data  1`] = `
<p
  class="mt0 alert--success"
>
  Has a \`&lt;meta name="viewport"&gt;\` tag with \`width\` or \`initial-scale\`
</p>
`;

exports[`mobile-item.vue Snapshot for mobile-item component without data 1`] = `
<p
  class="mt0 alert--danger"
>
  Has a \`&lt;meta name="viewport"&gt;\` tag with \`width\` or \`initial-scale\`
</p>
`;
